--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <a href="https://facebook.com/nizar.cherradi.9" target="_blank">
                 <i class="fa fa-facebook"></i>
               </a>
-              <a href="wa.me/+212607878182" target="_blank">
+              <a href="https://wa.me/+212607878182" target="_blank">
                 <i class="fa fa-whatsapp"></i>
               </a>
               <a href="https://instagram.com/nizar_loxer" target="_blank">
