--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
           </div>
           <div class="buttons padd-15" style="text-align: center">
             <!-- <a href="#" class="btn">Download CV</a> -->
-            <a href="https://behance.net/alnahian2003" target="_blank" class="btn">See More</a>
+            <a href="https://instagram.com/nizar_loxer" target="_blank" class="btn">See More</a>
           </div>
         </div>
       </section>
