--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -108,7 +108,7 @@
               <a href="https://facebook.com/nizar.cherradi.9" target="_blank">
                 <i class="fa fa-facebook"></i>
               </a>
-              <a href="https://wa.me/+212607878182" target="_blank">
+              <a href="wa.me/+212607878182" target="_blank">
                 <i class="fa fa-whatsapp"></i>
               </a>
               <a href="https://instagram.com/nizar_loxer" target="_blank">
@@ -372,98 +372,101 @@
           <div class="row">
             <div class="portfolio-filter padd-15">
               <button type="button" class="active" data-filter="all">
-                All
+                ALL
               </button>
-              <button type="button" data-filter="web-design">
-                Web Design
-              </button>
-              <button type="button" data-filter="wordpress">Wordpress</button>
+              <button type="button" data-filter="logos">LOGOS</button>
+              <button type="button" data-filter="brand">BRANDINGS</button>
+              <button type="button" data-filter="menu">MENUS</button>
+              <button type="button" data-filter="card">B-CARD</button>
             </div>
           </div>
           <div class="row">
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="web-design">
+            <div class="portfolio-item padd-15" data-category="logos">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/1.webp" alt="Web Design" />
+                  <img src="images/portfolio/3.png" alt="LOGO" />
                 </div>
                 <div class="portfolio-info">
-                  <h4>Web Design</h4>
+                  <h4>LAILA BOOKS LOGO</h4>
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="web-design">
+            <div class="portfolio-item padd-15" data-category="logos">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/2.webp" alt="Web Design" />
+                  <img src="images/portfolio/10.png" alt="LOGO" />
                 </div>
                 <div class="portfolio-info">
-                  <h4>Web Design</h4>
+                  <h4>LOXER DESIGN LOGO</h4>
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="web-design">
+            <div class="portfolio-item padd-15" data-category="card">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/3.webp" alt="Wordpress" />
+                  <img src="images/portfolio/11.png" alt="LOXER DESIGN B-CARD" />
                 </div>
                 <div class="portfolio-info">
-                  <h4>Wordpress</h4>
+                  <h4>B-CARD</h4>
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="web-design">
+            <div class="portfolio-item padd-15" data-category="brand">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/4.webp" alt="portfolio" />
+                  <img src="images/portfolio/4.png" alt="LOXER DESIGN BRAND" />
                 </div>
                 <div class="portfolio-info">
-                  <h4>Web Design</h4>
+                  <h4>LOXER DESIGN LOGO</h4>
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="wordpress">
+
+            <div class="portfolio-item padd-15" data-category="menu">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/5.webp" alt="WordPress" />
+                  <img src="images/portfolio/1.png" alt="BURGER MENU" />
                 </div>
                 <div class="portfolio-info">
-                  <h4>Wordpress</h4>
+                  <h4>RESTAURANT MENU</h4>
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="wordpress">
+            <div class="portfolio-item padd-15" data-category="menu">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/6.webp" alt="WordPress" />
+                  <img src="images/portfolio/2.png" alt="DRINK MENU" />
                 </div>
                 <div class="portfolio-info">
-                  <h4>Wordpress</h4>
+                  <h4>DRINK MENU</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15" data-category="menu">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/5.png" alt="FOOD MENU" />
+                </div>
+                <div class="portfolio-info">
+                  <h4>FOOD MENU</h4>
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
